--- a/Git/GitOne.Rmd
+++ b/Git/GitOne.Rmd
@@ -122,7 +122,15 @@ git log --pretty=format:"%h %ad- %s [%an]" -3 --stat
 
 Now, just to show how cool this is, we will mix in a little `R`.
 
-```{r label = Rgraph, engine = 'R'}
+```{r label = Rgraph, engine = 'R', fig.width = 8}
 library(ggplot2)
-ggplot(data = CO2, aes(x = Type, y = uptake)) + geom_boxplot()
+ggplot(data = CO2, aes(x = Type, y = uptake, fill = Type)) + 
+  geom_boxplot() +
+  facet_grid(Treatment~.) +
+  theme_bw()
 ```
+
+### So you want to collaborate?
+
+At this point, you have forked a repo and would like to contribute to
+someone's project.  A great place to start is by reading [https://help.github.com/articles/using-pull-requests](https://help.github.com/articles/using-pull-requests).
