staging all files

--- a/Git/GitOne.Rmd
+++ b/Git/GitOne.Rmd
@@ -28,6 +28,13 @@ Once the download is complete, right click on the downloaded file to install it 
 administrator.  Use the default options at each step of the installation if you are unsure 
 what you are doing.  When the installation arrives at the screen adjusting your PATH 
 environment, click in the circle to the left of **Run Git from the Windows Command Prompt**.
+You may need to manually add the path to where the **bash.exe** resides.  Run the 
+following at the `R` prompt to make sure `R` knows where to find `bash`.
+
+```{r label= BashCheck, engine="R"}
+Sys.which("bash")
+```
+If the output does not specify the path to **bash** you have a problem.
 
 
 ## Initial Setup
