--- a/KnitrFiles/Renvironment.tex
+++ b/KnitrFiles/Renvironment.tex
@@ -51,8 +51,13 @@
 \usepackage[colorlinks=true, linkcolor=blue, citecolor=blue, urlcolor=blue, linktocpage=true, breaklinks=true]{hyperref}
 \usepackage{geometry}[0.5in]
 \usepackage{amsthm}
+\newtheoremstyle{rcode}{1pt}{1pt}{}{}{\bfseries}{}{.5em}{}
+\theoremstyle{rcode}
 \newtheorem{rcode}{R Code}[section]
 \newtheorem{GIT}{GIT Example}[section]
+% User Commands
+\newcommand{\noind}{\setlength{\parindent}{0pt}}
+\newcommand{\reind}{\setlength{\parindent}{15pt}}
 
 \title{Using the Example Environment with \textbf{knitr}}
 \author{Alan's Modifications and Notes}
@@ -63,9 +68,11 @@
 
 
 
+
 \section{Introduction}
 
-This is a test of the \texttt{R} Example environment.
+This is a test of the \texttt{R} Code and GIT Example environments.  By the way,
+this document was last compiled Monday, February 17, 2014 - 11:49:31.
 
 \subsection{Simple Arithmetic}
 
@@ -92,7 +99,7 @@ This is a test of the \texttt{R} Example environment.
 \end{rcode}\end{kframe}
 \end{knitrout}
 
-\noindent
+\noind
 Find the standard deviation of \texttt{x}.
 
 \begin{knitrout}
@@ -106,7 +113,7 @@ Find the standard deviation of \texttt{x}.
 \end{rcode}\end{kframe}
 \end{knitrout}
 
-\noindent
+
 How about \texttt{R} Examples \ref{test-b} and \ref{test-c}?  The standard deviation of \texttt{x} is 0.9728.
 
 \clearpage
@@ -138,7 +145,7 @@ with a separate code chunk.  Note that Figure \ref{graphDude} is hyperlinked!
 \hlkwd{ggplot}\hlstd{(}\hlkwc{data} \hlstd{= mtcars)} \hlopt{+}
   \hlkwd{geom_density}\hlstd{(}\hlkwd{aes}\hlstd{(}\hlkwc{x} \hlstd{= mpg),} \hlkwc{fill} \hlstd{=} \hlstr{"pink"}\hlstd{)} \hlopt{+}
   \hlkwd{theme_bw}\hlstd{()} \hlopt{+}
-  \hlkwd{labs}\hlstd{(}\hlkwc{x} \hlstd{=} \hlstr{"miles per gallon"}\hlstd{,} \hlkwc{y} \hlstd{=} \hlstr{""}\hlstd{)}
+  \hlkwd{labs}\hlstd{(}\hlkwc{x} \hlstd{=} \hlstr{"miles per gallon"}\hlstd{,} \hlkwc{y} \hlstd{=} \hlstr{""}\hlstd{,} \hlkwc{title} \hlstd{=} \hlstr{"$\textbackslash{}\textbackslash{}alpha + \textbackslash{}\textbackslash{}beta = \textbackslash{}\textbackslash{}delta$"}\hlstd{)}
 \end{alltt}
 \end{rcode}\end{kframe}
 \end{knitrout}
@@ -159,12 +166,12 @@ with a separate code chunk.  Note that Figure \ref{graphDude} is hyperlinked!
 \caption{This is where you explain your graph \label{graphDude}}
 \end{figure}
 
-\noindent
+
 When working with OSX, one may want to change \texttt{engine = `sh'} to \texttt{engine = `bash'}.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{GIT}\label{GIT}\hfill{}\begin{alltt}
+\begin{GIT}\label{GITlabel}\hfill{}\begin{alltt}
 git config --list
 \end{alltt}
 
@@ -187,7 +194,22 @@ branch.master.merge=refs/heads/master
 \end{GIT}\end{kframe}
 \end{knitrout}
 
-\noindent
-Look at \texttt{R} Code \ref{test-a} to add $1 + 1$ and get the answer 2.
+
+Look at \texttt{R} Code \ref{test-a} to add $1 + 1$ and get the answer 2. The output from GIT Example \ref{GITlabel} shows how my machine is configured. GIT Example \ref{gitlog} shows the log.
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{GIT}\label{gitlog}\hfill{}\begin{alltt}
+git log --pretty=oneline -3
+\end{alltt}
+
+\begin{verbatim}
+dfc8679773fbf6e3ec493dde9cc72e4e9acbc67a minor changes
+a723332bfe0574aaa6cc71a3391a9d1a5110be08 initial commit
+716228d8dfeb1d139c29badd85184971d90471cd add chapter 7 modifications
+\end{verbatim}
+\end{GIT}\end{kframe}
+\end{knitrout}
+
 
 \end{document}
