--- a/KnitrFiles/Renvironment.Rnw
+++ b/KnitrFiles/Renvironment.Rnw
@@ -2,15 +2,16 @@
 \usepackage[colorlinks=true, linkcolor=blue, citecolor=blue, urlcolor=blue, linktocpage=true, breaklinks=true]{hyperref}
 \usepackage{geometry}[0.5in]
 \usepackage{amsthm}
+\usepackage{varioref}  % adds page to references use \vref{} vs \ref{}
 \newtheoremstyle{rcode}{1pt}{1pt}{}{}{\bfseries}{}{.5em}{}
 \theoremstyle{rcode}
 \newtheorem{rcode}{R Code}[section]
-\newtheorem{GIT}{GIT Example}[section]
+\newtheorem{GIT}{Git Example}[section]
 % User Commands
 \newcommand{\noind}{\setlength{\parindent}{0pt}}
 \newcommand{\reind}{\setlength{\parindent}{15pt}}
 
-\title{Using the Example Environment with \textbf{knitr}}
+\title{Using the \texttt{R} Code and Git Example Environments with \textbf{knitr}}
 \author{Alan's Modifications and Notes}
 \begin{document}
 \maketitle
@@ -31,7 +32,7 @@ DT <- format(Sys.time(), "%A, %B %d, %Y - %X")
 
 \section{Introduction}
 
-This is a test of the \texttt{R} Code and GIT Example environments.  By the way,
+This is a test of the {\bfseries{R Code}} and {\bfseries{Git Example}} environments.  By the way,
 this document was last compiled \Sexpr{DT}.
 
 \subsection{Simple Arithmetic}
@@ -53,7 +54,7 @@ Find the standard deviation of \texttt{x}.
 sd(x) # standard deviation
 @
 
-How about \texttt{R} Examples \ref{test-b} and \ref{test-c}?  The standard deviation of \texttt{x} is \Sexpr{sd(x)}.
+How about {\bfseries{R Code}} \vref{test-b} and \vref{test-c}?  The standard deviation of \texttt{x} is \Sexpr{sd(x)}.
 
 \clearpage
 \subsection{Graphs and Environments}
@@ -67,7 +68,7 @@ MEAN
 The mean of the junk is \Sexpr{MEAN}.  Note: It seems that an error is thrown if
 a code chunk with a graph and \texttt{rcode} is executed at the same time.  Work around is
 as shown below.  That is, hide the figure when showing the code...then show the figure
-with a separate code chunk.  Note that Figure \ref{graphDude} is hyperlinked!
+with a separate code chunk.  Note that Figure \vref{graphDude} is hyperlinked!
 
 <<Graph, rcode = TRUE, fig.show='hide'>>=
 library(ggplot2)
@@ -91,7 +92,7 @@ When working with OSX, one may want to change \texttt{engine = `sh'} to \texttt{
 git config --list
 @
 
-Look at \texttt{R} Code \ref{test-a} to add $1 + 1$ and get the answer \Sexpr{1 + 1}. The output from GIT Example \ref{GITlabel} shows how my machine is configured. GIT Example \ref{gitlog} shows the log.
+Look at {\bfseries{R Code}} \vref{test-a} to add $1 + 1$ and get the answer \Sexpr{1 + 1}. The output from {\bfseries{Git Example}} \vref{GITlabel} shows how my machine is configured. {\bfseries{Git Example}} \vref{gitlog} shows the log.
 
 <<gitlog, engine = 'sh', GIT = TRUE>>=
 git log --pretty=oneline -3
