--- a/KnitrFiles/Renvironment.Rnw
+++ b/KnitrFiles/Renvironment.Rnw
@@ -130,4 +130,11 @@ p + stat_function(fun = f) +
   geom_hline(yintercept = 1, lty = "dashed")
 @
 
+<<base, echo = FALSE>>=
+library(ggplot2)
+p <- ggplot(data = mpg, aes(x = cty, y = hwy))
+p + geom_point(size = 1, color = "blue") + theme_bw() + geom_smooth(method = "lm") + 
+  labs(title = "$\\hat{\\beta}=(X'X)^{-1}X'Y$") 
+@
+
 \end{document}
