--- a/KnitrFiles/Renvironment.tex
+++ b/KnitrFiles/Renvironment.tex
@@ -73,7 +73,7 @@
 \section{Introduction}
 
 This is a test of the \textbf{R Code} and \textbf{Git Example} environments.  By the way,
-this document was last compiled Monday, February 17, 2014 - 13:46:13.
+this document was last compiled Monday, February 17, 2014 - 14:08:23.
 
 \subsection{Simple Arithmetic}
 
@@ -244,6 +244,18 @@ How about some more \LaTeX{} in a \texttt{ggplot2} graph.
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
 
 {\centering \includegraphics[width=1.0\textwidth]{figure/molatexFIG} 
+
+}
+
+
+
+\end{knitrout}
+
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+
+{\centering \includegraphics[width=\maxwidth]{figure/base} 
 
 }
 
